fixed overflow with mobile nav

--- a/src/css/style-imports/general.sass
+++ b/src/css/style-imports/general.sass
@@ -2,6 +2,8 @@ html, body
   overflow-x: hidden
   padding: 0
   margin: 0
+html.no-scroll
+  overflow-y: hidden
 
 @media (min-width: 576px)
   .container
